shader bug fix